--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.0.0-beta2",
     "chart.js": "^2.9.4",
+    "moment": "^2.29.1",
+    "ol": "^6.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
